Fixing project settings to work on my laptop
Using the Reach graphics profile instead of the HiDef one. Same results.

--- a/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
+++ b/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XnaProfile>HiDef</XnaProfile>
+    <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>566c3651-fdcc-4c40-bfe3-09ac5b368a1a</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
