--- a/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
+++ b/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
@@ -90,6 +90,9 @@
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
+    <Reference Include="RuminateGui">
+      <HintPath>.\RuminateGui.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
@@ -108,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="GuiManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
