--- a/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
+++ b/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="GuiManager.cs" />
+    <Compile Include="Light.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
