Initial code to draw light positions

--- a/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
+++ b/comp4900-xtoon/comp4900-xtoon/comp4900-xtoon.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="GuiManager.cs" />
     <Compile Include="Light.cs" />
+    <Compile Include="PrimitiveBatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
