--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,10 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# LaTex junk
+paper/*.aux
+paper/*.blg
+paper/*.dvi
+paper/*.pdf
+paper/*.synctex.gz
